--- a/assets/pages/gallery.html
+++ b/assets/pages/gallery.html
@@ -75,11 +75,18 @@
 
             <div class="images-gallery-container container grid">
 
-                <div class="image-card-primary image-card"><img src="/assets/PORT-IMG/port-56.png" alt="image"></div>
-                <div class="image-card-secondary image-card"><img src="/assets/PORT-IMG/port-55.png" alt="gallery image"></div>
+                <div class="image-card-primary image-card"><img src="/assets/PORT-IMG/port-58.png" alt="image"></div>
+                <div class="image-card-secondary image-card"><img src="/assets/PORT-IMG/port-59.png" alt="gallery image"></div>
                 <div class="image-card-video image-card-alt">
                     <iframe src="https://player.vimeo.com/video/980101736?background=1&dnt=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                 </div>
+                <div class="image-card-primary image-card"><img src="/assets/PORT-IMG/port-20.png" alt="image"></div>
+                <div class="image-card-secondary image-card"><img src="/assets/PORT-IMG/port-21.png" alt="image"></div>
+                <div class="image-card-video image-card-alt">
+                    <iframe src="https://player.vimeo.com/video/980120117?background=1&dnt=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="image-card-primary image-card"><img src="/assets/PORT-IMG/port-23.png" alt="image"></div>
+                <div class="image-card-secondary image-card"><img src="/assets/PORT-IMG/port-24.png" alt="image"></div>
                 <div class="image-card-primary image-card"><img src="/assets/PORT-IMG/port-54.png" alt="image"></div>
                 <div class="image-card-secondary image-card"><img src="/assets/PORT-IMG/port-53.png" alt="image"></div>
                 <div class="image-card-primary image-card"><img src="/assets/PORT-IMG/port-52.png" alt="gallery image"></div>
