--- a/assets/pages/projects.html
+++ b/assets/pages/projects.html
@@ -79,18 +79,37 @@
 
          <!-- ========================================================== -->
 
+         <section class="projects-showcase section" id="projects-showcase-1">
+
+            <div class="projects-showcase-container container flex-column">
+
+                <div class="projects-title-group">
+                    <h2 class="project-showcase-title section-title">89 W Grand Regency</h2>
+                </div>
+
+                <ul class="showcase-grid grid">
+                    <li class="showcase-item-container grid-item-primary bottom"><img src="/assets/PORT-IMG/port-57.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-secondary bottom"><img src="/assets/PORT-IMG/port-24.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-tre bottom"><img src="/assets/PORT-IMG/port-20.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-four bottom"><img src="/assets/PORT-IMG/port-23.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-five bottom"><img src="/assets/PORT-IMG/port-21.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-six bottom"><img src="/assets/PORT-IMG/port-25.png" alt="Projects image"></li>
+
+                    <li class="showcase-item-container grid-item-seven bottom"><iframe src="https://player.vimeo.com/video/980101736?background=1&dnt=1" allow="autoplay; fullscreen; picture-in-picture"></iframe></li>
+                    
+
+                </ul>
+            </div>
+
+        </section>
+
         <section class="projects-showcase section" id="projects-showcase-1">
 
             <div class="projects-showcase-container container flex-column">
 
                 <div class="projects-title-group">
                     <h2 class="project-showcase-title section-title">703 Malone</h2>
-                    <ul class="project-title-flex-group">
-                        <li><p class="project-description"></p>4 Bedrooms</li>
-                        <li><p class="project-description"></p> 1700 sq ft.</li>
-                        <li><p class="project-description"></p>3 bathrooms</li>
-                        <li><div class="project-avaliability"><p>Avaliable</p></div></li>
-                    </ul>
+                   
                 </div>
 
                 <ul class="showcase-grid grid">
@@ -112,12 +131,6 @@
 
                 <div class="projects-title-group">
                     <h2 class="project-showcase-title section-title">11101 Beinhorn</h2>
-                    <ul class="project-title-flex-group">
-                        <li><p class="project-description"></p>4 Bedrooms</li>
-                        <li><p class="project-description"></p> 1700 sq ft.</li>
-                        <li><p class="project-description"></p>3 bathrooms</li>
-                        <li><div class="project-avaliability"><p>Avaliable</p></div></li>
-                    </ul>
                 </div>
 
                 <ul class="showcase-grid grid">
@@ -139,12 +152,6 @@
 
                 <div class="projects-title-group">
                     <h2 class="project-showcase-title section-title">4027 Sul Ross</h2>
-                    <ul class="project-title-flex-group">
-                        <li><p class="project-description"></p>4 Bedrooms</li>
-                        <li><p class="project-description"></p> 1700 sq ft.</li>
-                        <li><p class="project-description"></p>3 bathrooms</li>
-                        <li><div class="project-avaliability"><p>Avaliable</p></div></li>
-                    </ul>
                 </div>
 
                 <ul class="showcase-grid grid">
@@ -166,12 +173,6 @@
 
                 <div class="projects-title-group">
                     <h2 class="project-showcase-title section-title">4011 West Main</h2>
-                    <ul class="project-title-flex-group">
-                        <li><p class="project-description"></p>4 Bedrooms</li>
-                        <li><p class="project-description"></p> 1700 sq ft.</li>
-                        <li><p class="project-description"></p>3 bathrooms</li>
-                        <li><div class="project-avaliability"><p>Avaliable</p></div></li>
-                    </ul>
                 </div>
 
                 <ul class="showcase-grid grid">
@@ -193,12 +194,6 @@
 
                 <div class="projects-title-group">
                     <h2 class="project-showcase-title section-title">4006 Essex</h2>
-                    <ul class="project-title-flex-group">
-                        <li><p class="project-description"></p>4 Bedrooms</li>
-                        <li><p class="project-description"></p> 1700 sq ft.</li>
-                        <li><p class="project-description"></p>3 bathrooms</li>
-                        <li><div class="project-avaliability"><p>Avaliable</p></div></li>
-                    </ul>
                 </div>
 
                 <ul class="showcase-grid grid">
@@ -219,12 +214,6 @@
 
                 <div class="projects-title-group">
                     <h2 class="project-showcase-title section-title">3762 Georgetown</h2>
-                    <ul class="project-title-flex-group">
-                        <li><p class="project-description"></p>4 Bedrooms</li>
-                        <li><p class="project-description"></p> 1700 sq ft.</li>
-                        <li><p class="project-description"></p>3 bathrooms</li>
-                        <li><div class="project-avaliability"><p>Avaliable</p></div></li>
-                    </ul>
                 </div>
 
                 <ul class="showcase-grid grid">
@@ -245,12 +234,6 @@
 
                 <div class="projects-title-group">
                     <h2 class="project-showcase-title section-title">528 W 31st</h2>
-                    <ul class="project-title-flex-group">
-                        <li><p class="project-description"></p>4 Bedrooms</li>
-                        <li><p class="project-description"></p> 1700 sq ft.</li>
-                        <li><p class="project-description"></p>3 bathrooms</li>
-                        <li><div class="project-avaliability"><p>Avaliable</p></div></li>
-                    </ul>
                 </div>
 
                 <ul class="showcase-grid grid">
@@ -271,12 +254,6 @@
 
                 <div class="projects-title-group">
                     <h2 class="project-showcase-title section-title">307 W 32nd</h2>
-                    <ul class="project-title-flex-group">
-                        <li><p class="project-description"></p>4 Bedrooms</li>
-                        <li><p class="project-description"></p> 1700 sq ft.</li>
-                        <li><p class="project-description"></p>3 bathrooms</li>
-                        <li><div class="project-avaliability"><p>Avaliable</p></div></li>
-                    </ul>
                 </div>
 
                 <ul class="showcase-grid grid">
