--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
             </div>
 
-            <video class="home-background-video scale" id="home-video" autoplay muted loop playsinline>
+            <video class="home-background-video scale" loading="lazy" id="home-video" autoplay muted loop playsinline>
                 <source src="assets/IMG/J&A Home video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -102,19 +102,19 @@
 
                 <ul class="gallery-grid-list grid">
                     <li class="gallery-grid-item g-i-1"><img src="assets/IMG/gallery-background-image.png" class="bottom" alt="About image one"></li>
-                    <li class="gallery-grid-item g-i-2"><img src="assets/PORT-IMG/port-1.png" class="right" alt="About image two"></li>
-                    <li class="gallery-grid-item g-i-3"><img src="assets/PORT-IMG/port-14.png" class="bottom" alt="About image three"></li>
-                    <li class="gallery-grid-item g-i-4"><img src="assets/PORT-IMG/port-26.png" class="top" alt="About image four"></li>
-                    <li class="gallery-grid-item g-i-5"><img src="assets/PORT-IMG/port-19.png" class="right" alt="About image five"></li>
-                    <li class="gallery-grid-item g-i-6"><img src="assets/PORT-IMG/port-5.png" class="bottom" alt="About image six"></li>
-                    <li class="gallery-grid-item g-i-7"><img src="assets/PORT-IMG/port-21.png" class="left" alt="About image seven"></li>
-                    <li class="gallery-grid-item g-i-8"><img src="assets/PORT-IMG/port-52.png" class="right" alt="About image eight"></li>
+                    <li class="gallery-grid-item g-i-2"><img src="assets/PORT-IMG/port-1.png" class="bottom-delayed" alt="About image two"></li>
+                    <li class="gallery-grid-item g-i-3"><img src="assets/PORT-IMG/port-14.png" class="bottom-delayed" alt="About image three"></li>
+                    <li class="gallery-grid-item g-i-4"><img src="assets/PORT-IMG/port-26.png" class="bottom-delayed" alt="About image four"></li>
+                    <li class="gallery-grid-item g-i-5"><img src="assets/PORT-IMG/port-19.png" class="bottom-delayed" alt="About image five"></li>
+                    <li class="gallery-grid-item g-i-6"><img src="assets/PORT-IMG/port-5.png" class="bottom-delayed" alt="About image six"></li>
+                    <li class="gallery-grid-item g-i-7"><img src="assets/PORT-IMG/port-21.png" class="bottom-delayed" alt="About image seven"></li>
+                    <li class="gallery-grid-item g-i-8"><img src="assets/PORT-IMG/port-52.png" class="bottom-delayed" alt="About image eight"></li>
 
                 </ul>
 
                 <div class="gallery-buttons-container responsive-container">
-                    <a href="assets/pages/gallery.html" class="gallery-button left"><h4>See full gallery</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                    <a href="#services" class="gallery-button left-delayed"><h4>See our services</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                    <a href="assets/pages/gallery.html" class="gallery-button left"><h4>See full gallery</h4><img src="assets/IMG/arrow-icon-white.svg" alt="arrow-icon"></a>
+                    <a href="#services" class="gallery-button left-delayed"><h4>See our services</h4><img src="assets/IMG/arrow-icon-white.svg" alt="arrow-icon"></a>
                 </div>
 
             </div>
