--- a/index.html
+++ b/index.html
@@ -211,6 +211,12 @@
                     </div>
 
                     <div class="portfolio-card swiper-slide">
+                        <h4 class="portfolio-card-title">89 W Grand Regency</h4>
+                        <a href="assets/pages/projects.html#projects-showcase-10" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <img src="assets/PORT-IMG/port-57.png" alt="Portfolio image 1" class="portfolio-card-img">
+                    </div>
+
+                    <div class="portfolio-card swiper-slide">
                         <h4 class="portfolio-card-title">11101 Beinhorn</h4>
                         <a href="assets/pages/projects.html#projects-showcase-2" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
                         <img src="assets/PORT-IMG/port-43.png" alt="Portfolio image 1" class="portfolio-card-img">
